<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="center" android:layout_width="200dp" android:layout_height="200dp" android:src="@drawable/checklist"/>
    <com.google.android.material.textfield.TextInputLayout android:textSize="20sp" android:hint="@string/email" style="@style/styleEditText">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/edtEmailSignUp" android:layout_width="match_parent" android:layout_height="match_parent" android:fontFamily="@font/roboto_regular"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:hint="@string/password" app:passwordToggleEnabled="true" style="@style/styleEditText">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/edtxtPassword" android:layout_width="match_parent" android:layout_height="match_parent" android:inputType="textPassword" android:fontFamily="@font/roboto_regular"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:hint="@string/confirmPassword" app:passwordToggleEnabled="true" style="@style/styleEditText">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/edtConfirmPassword" android:layout_width="match_parent" android:layout_height="match_parent" android:inputType="textPassword" android:fontFamily="@font/roboto_regular"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton android:textSize="24sp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/btnSignUp" android:background="@drawable/button" android:layout_width="180dp" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/signUp" android:textAllCaps="false" android:fontFamily="@font/roboto_medium" android:elevation="10dp"/>
</LinearLayout>
